фысаыаыв вымвам вам

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sihir Perubahan Warna Keramik Cangkir Panas Sensitif Mug Dua Belas Rasi Bintang Suhu Berubah Cokelat
-        Kehitaman Mug Hadiah</title>
+    <title>Книга Артура Каюмова</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link href="css1/style1.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
