--- a/land/index.html
+++ b/land/index.html
@@ -69,7 +69,7 @@
                                 <input class="input-form input-phone" type="text" name="phone" placeholder="Мой телефон" required>
                                 <input type='hidden' name='campaign_id' value='907221' />
                                 <input type='hidden' name='sid1' value='Kirill' />
-                                <input type='hidden' name='redirect_url' value='http://yandex.ru' />
+                                <input type='hidden' name='redirect_url' value='land/thanks.html' />
                                 <button class="submit-form" type="submit">Заказать по акции</button>
                                 <p class="last">* цена за порцию</p>
                             </form>
@@ -165,7 +165,7 @@
                         <input class="input-form input-phone" type="text" name="phone" placeholder="Мой телефон" required>
                         <input type='hidden' name='campaign_id' value='907221' />
                         <input type='hidden' name='sid1' value='Kirill' />
-                        <input type='hidden' name='redirect_url' value='http://yandex.ru' />
+                        <input type='hidden' name='redirect_url' value='land/thanks.html' />
                         <button class="submit-form" type="submit">Заказать по акции</button>
                         <p class="last">* цена за порцию</p>
                     </form>
@@ -414,7 +414,7 @@
                             <input class="input-form input-phone" type="text" name="phone" placeholder="Мой телефон" required>
                             <input type='hidden' name='campaign_id' value='907221' />
                             <input type='hidden' name='sid1' value='Kirill' />
-                            <input type='hidden' name='redirect_url' value='http://yandex.ru' />
+                            <input type='hidden' name='redirect_url' value='land/thanks.html' />
                             <button class="submit-form" type="submit">Заказать по акции </button>
                             <p class="last">* цена за порцию</p>
                         </form>
