--- a/land/index.html
+++ b/land/index.html
@@ -439,9 +439,11 @@
     </div>
     </div>
     <script src="js/everad.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- НЕОБХОДИМЫЕ СКРИПТЫ -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-url/2.5.3/url.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
+</body>
 <script>
 	$(function() {
 		if (url('?pixel')) Cookies.set('pixel', url('?pixel'), {expires: 30});
@@ -451,6 +453,37 @@
 <script>
     $.getJSON("http://gd.geobytes.com/GetCityDetails?callback=?",function(t){window.ip=t.geobytesremoteip});
 </script>
-</body>
+<script>
+    $(function () {
+        $('form').submit(function (e) {
 
+			form = this;
+			e.preventDefault();
+
+			button = $(this).find('button[type="submit"]');
+			buttonText = $(button).text();
+			$(button).text('Обработка...');
+
+            data = {
+                fullName: $(this).find('input[name="name"]').val(),
+                campaign_id: 906780	,
+                ip: window.ip,
+                phone: $(this).find('input[name="phone"]').val(),
+                country_code: 'RU',
+                click_id: Cookies.get('click_id')
+			};
+
+			console.log(data);
+
+            $.ajax('https://beta.dolphin.ru.com/everad.php', {
+                method: 'post',
+                data: data,
+                success: function (r) {
+                    $(button).text(buttonText);
+                    location.href = '../thanks.html';
+                }
+            })
+        });
+    })
+</script>
 </html>
