--- a/land/thanks.html
+++ b/land/thanks.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 <!-- Facebook сф6 Pixel Code -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>     n nk knj 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
 <script>
     !function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
